Save cleaned dataset

--- a/src/01-eda.ipynb
+++ b/src/01-eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path.cwd().parents[0] / \"input/data.csv\"\n",
+    "path = Path(\"../input/dataset.csv\")\n",
     "df = pd.read_csv(path, encoding= \"unicode_escape\")"
    ]
   },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +62,28 @@
     "            country= lambda df_: df_[\"country\"].str.title().str.strip(), \n",
     "            total_price=lambda df_: df_[\"quantity\"].mul(df_[\"unit_price\"]).astype(float),\n",
     "        )\n",
+    "        .loc[lambda df_: df_[\"quantity\"] > 0]\n",
     "        .loc[:, [\"invoice_no\", \"invoice_date\", \"description\", \"stock_code\", \"unit_price\", \n",
     "                \"quantity\", \"total_price\", \"customer_id\", \"country\"]]\n",
     "    )\n",
     "df_clean = clean_df(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Clean Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not (path := Path(\"../input/dataset-clean.parquet\")).is_file():\n",
+    "    df_clean.to_parquet(path)"
    ]
   },
   {
@@ -77,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -114,58 +132,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>invoice_date</th>\n",
-       "      <td>541909</td>\n",
-       "      <td>2011-07-04 13:34:57.156386048</td>\n",
+       "      <td>531285</td>\n",
+       "      <td>2011-07-04 18:15:45.816539136</td>\n",
        "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>2011-03-28 11:34:00</td>\n",
-       "      <td>2011-07-19 17:17:00</td>\n",
-       "      <td>2011-10-19 11:27:00</td>\n",
+       "      <td>2011-03-28 11:59:00</td>\n",
+       "      <td>2011-07-20 12:01:00</td>\n",
+       "      <td>2011-10-19 12:35:00</td>\n",
        "      <td>2011-12-09 12:50:00</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unit_price</th>\n",
-       "      <td>541909.0</td>\n",
-       "      <td>4.611114</td>\n",
+       "      <td>531285.0</td>\n",
+       "      <td>3.857296</td>\n",
        "      <td>-11062.06</td>\n",
        "      <td>1.25</td>\n",
        "      <td>2.08</td>\n",
        "      <td>4.13</td>\n",
-       "      <td>38970.0</td>\n",
-       "      <td>96.759853</td>\n",
+       "      <td>13541.33</td>\n",
+       "      <td>41.810047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>quantity</th>\n",
-       "      <td>541909.0</td>\n",
-       "      <td>9.55225</td>\n",
-       "      <td>-80995.0</td>\n",
+       "      <td>531285.0</td>\n",
+       "      <td>10.655262</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>80995.0</td>\n",
-       "      <td>218.081158</td>\n",
+       "      <td>156.830323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total_price</th>\n",
-       "      <td>541909.0</td>\n",
-       "      <td>17.987795</td>\n",
-       "      <td>-168469.6</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>9.75</td>\n",
-       "      <td>17.4</td>\n",
+       "      <td>531285.0</td>\n",
+       "      <td>20.0355</td>\n",
+       "      <td>-11062.06</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>17.7</td>\n",
        "      <td>168469.6</td>\n",
-       "      <td>378.810824</td>\n",
+       "      <td>270.91237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>customer_id</th>\n",
-       "      <td>406829.0</td>\n",
-       "      <td>15287.69057</td>\n",
+       "      <td>397924.0</td>\n",
+       "      <td>15294.315171</td>\n",
        "      <td>12346.0</td>\n",
-       "      <td>13953.0</td>\n",
-       "      <td>15152.0</td>\n",
-       "      <td>16791.0</td>\n",
+       "      <td>13969.0</td>\n",
+       "      <td>15159.0</td>\n",
+       "      <td>16795.0</td>\n",
        "      <td>18287.0</td>\n",
-       "      <td>1713.600303</td>\n",
+       "      <td>1713.169877</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -173,28 +191,28 @@
       ],
       "text/plain": [
        "                 count                           mean                  min  \\\n",
-       "invoice_date    541909  2011-07-04 13:34:57.156386048  2010-12-01 08:26:00   \n",
-       "unit_price    541909.0                       4.611114            -11062.06   \n",
-       "quantity      541909.0                        9.55225             -80995.0   \n",
-       "total_price   541909.0                      17.987795            -168469.6   \n",
-       "customer_id   406829.0                    15287.69057              12346.0   \n",
+       "invoice_date    531285  2011-07-04 18:15:45.816539136  2010-12-01 08:26:00   \n",
+       "unit_price    531285.0                       3.857296            -11062.06   \n",
+       "quantity      531285.0                      10.655262                  1.0   \n",
+       "total_price   531285.0                        20.0355            -11062.06   \n",
+       "customer_id   397924.0                   15294.315171              12346.0   \n",
        "\n",
        "                              25%                  50%                  75%  \\\n",
-       "invoice_date  2011-03-28 11:34:00  2011-07-19 17:17:00  2011-10-19 11:27:00   \n",
+       "invoice_date  2011-03-28 11:59:00  2011-07-20 12:01:00  2011-10-19 12:35:00   \n",
        "unit_price                   1.25                 2.08                 4.13   \n",
        "quantity                      1.0                  3.0                 10.0   \n",
-       "total_price                   3.4                 9.75                 17.4   \n",
-       "customer_id               13953.0              15152.0              16791.0   \n",
+       "total_price                  3.75                  9.9                 17.7   \n",
+       "customer_id               13969.0              15159.0              16795.0   \n",
        "\n",
        "                              max          std  \n",
        "invoice_date  2011-12-09 12:50:00          NaN  \n",
-       "unit_price                38970.0    96.759853  \n",
-       "quantity                  80995.0   218.081158  \n",
-       "total_price              168469.6   378.810824  \n",
-       "customer_id               18287.0  1713.600303  "
+       "unit_price               13541.33    41.810047  \n",
+       "quantity                  80995.0   156.830323  \n",
+       "total_price              168469.6    270.91237  \n",
+       "customer_id               18287.0  1713.169877  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -238,15 +256,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>invoice_no</th>\n",
-       "      <td>25900</td>\n",
+       "      <td>20728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>stock_code</th>\n",
-       "      <td>4070</td>\n",
+       "      <td>3941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>customer_id</th>\n",
-       "      <td>4372</td>\n",
+       "      <td>4339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>country</th>\n",
@@ -258,13 +276,13 @@
       ],
       "text/plain": [
        "             num_unique_value\n",
-       "invoice_no              25900\n",
-       "stock_code               4070\n",
-       "customer_id              4372\n",
+       "invoice_no              20728\n",
+       "stock_code               3941\n",
+       "customer_id              4339\n",
        "country                    38"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +334,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>description</th>\n",
-       "      <td>1454</td>\n",
+       "      <td>592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>stock_code</th>\n",
@@ -336,7 +354,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>customer_id</th>\n",
-       "      <td>135080</td>\n",
+       "      <td>133361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>country</th>\n",
@@ -350,16 +368,16 @@
        "              num_null_rows\n",
        "invoice_no                0\n",
        "invoice_date              0\n",
-       "description            1454\n",
+       "description             592\n",
        "stock_code                0\n",
        "unit_price                0\n",
        "quantity                  0\n",
        "total_price               0\n",
-       "customer_id          135080\n",
+       "customer_id          133361\n",
        "country                   0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
