--- a/src/02-customer-segment.ipynb
+++ b/src/02-customer-segment.ipynb
@@ -67,7 +67,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# Customer Segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
    ]
   },
   {
@@ -261,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hopkins Test"
+    "## Hopkins Test"
    ]
   },
   {
@@ -300,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Select Algorithm and Number of Clustes"
+    "## Select Algorithm and Number of Clustes"
    ]
   },
   {
@@ -500,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Segmentation"
+    "## Segmentation"
    ]
   },
   {
@@ -532,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Segment Profiling"
+    "## Segment Profiling"
    ]
   },
   {
@@ -832,6 +839,271 @@
     "    model= agglo, \n",
     "    df= df_clean\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not (path := Path(\"../output/segmentation_result.csv\")).is_file():\n",
+    "    df_clean.to_parquet(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sales Forecasting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-12-02</td>\n",
+       "      <td>143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-12-03</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-12-05</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-12-06</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ds    y\n",
+       "0  2010-12-01  136\n",
+       "1  2010-12-02  143\n",
+       "2  2010-12-03   73\n",
+       "3  2010-12-05   88\n",
+       "4  2010-12-06  108"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prepare_for_forecasting(df):\n",
+    "    return (df\n",
+    "        .assign(ds=lambda df_: df_[\"invoice_date\"].dt.date)\n",
+    "        .groupby(\"ds\")\n",
+    "        .agg(y=(\"invoice_no\", \"nunique\"))\n",
+    "        .reset_index()\n",
+    "        .sort_values(\"ds\")\n",
+    "    )\n",
+    "\n",
+    "df_forecast = prepare_for_forecasting(df)\n",
+    "df_forecast.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HP Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prophet import Prophet\n",
+    "from prophet.diagnostics import cross_validation, performance_metrics\n",
+    "import optuna\n",
+    "from IPython.utils import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(trial):\n",
+    "    params = {\n",
+    "        \"changepoint_prior_scale\": trial.suggest_float(\"changepoint_prior_scale\", 0.005, 5),\n",
+    "        \"changepoint_range\": trial.suggest_float(\"changepoint_range\", 0.8, 0.9),\n",
+    "        \"seasonality_prior_scale\": trial.suggest_float(\"seasonality_prior_scale\", 0.1, 10),\n",
+    "        \"holidays_prior_scale\": trial.suggest_float(\"holidays_prior_scale\", 0.1, 10),\n",
+    "        \"seasonality_mode\": trial.suggest_categorical(\"seasonality_mode\", [\"multiplicative\", \"additive\"]),\n",
+    "        \"weekly_seasonality\": trial.suggest_int(\"weekly_seasonality\", 5, 10),\n",
+    "        \"yearly_seasonality\": trial.suggest_int(\"yearly_seasonality\", 1, 20)\n",
+    "    }\n",
+    "    number_initial_days = df_forecast.shape[0]-28\n",
+    "    model = Prophet(**params)\n",
+    "    model.fit(df_forecast) \n",
+    "    df_cv = cross_validation(model,\n",
+    "                            initial=f\"{number_initial_days} days\", \n",
+    "                            period=\"7 days\", \n",
+    "                            horizon = \"7 days\",\n",
+    "                            parallel=\"processes\"\n",
+    "                            )\n",
+    "    df_p = performance_metrics(df_cv)\n",
+    "    mape = df_p[\"mape\"].mean()\n",
+    "    return mape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# study = optuna.create_study(direction='minimize')\n",
+    "# study.optimize(objective, n_trials=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = {\n",
+    "    'changepoint_prior_scale': 1.8840915504267643,\n",
+    "    'changepoint_range': 0.8355410945168996,\n",
+    "    'seasonality_prior_scale': 3.0649658167161427,\n",
+    "    'holidays_prior_scale': 4.85923239571044,\n",
+    "    'seasonality_mode': 'multiplicative',\n",
+    "    'weekly_seasonality': 9,\n",
+    "    'yearly_seasonality': 4\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forecasting for the Last 2 Weeks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12:30:41 - cmdstanpy - INFO - Chain [1] start processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12:30:41 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create split\n",
+    "test_period = 14\n",
+    "train_set = df_forecast.iloc[:-test_period]\n",
+    "test_set = df_forecast.iloc[-test_period:]\n",
+    "assert ((len(test_set) + len(train_set)) == len(df_forecast))\n",
+    "\n",
+    "# predict\n",
+    "m = Prophet(**best_params)\n",
+    "m.fit(train_set)\n",
+    "test_pred = m.predict(test_set)\n",
+    "\n",
+    "# merge with test set\n",
+    "test_set = (test_set\n",
+    "    .assign(ds=lambda df_: pd.to_datetime(df_[\"ds\"]))\n",
+    "    .merge(\n",
+    "        test_pred.loc[:, [\"ds\", \"yhat\", \"yhat_lower\", \"yhat_upper\"]], \n",
+    "        on=\"ds\", \n",
+    "        how=\"left\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# concat everything\n",
+    "df_forecast = pd.concat([train_set, test_set])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not (path := Path(\"../output/forecast_result.csv\")).is_file():\n",
+    "    df_forecast.to_parquet(path)"
    ]
   }
  ],
