Resave the data.

--- a/src/02-customer-segment.ipynb
+++ b/src/02-customer-segment.ipynb
@@ -850,12 +850,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not (path := Path(\"../output/segmentation_result.csv\")).is_file():\n",
-    "    df_clean.to_parquet(path)"
+    "    df_clean.to_csv(path, index=False)"
    ]
   },
   {
@@ -1093,17 +1093,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save DF"
+    "## Save DF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not (path := Path(\"../output/forecast_result.csv\")).is_file():\n",
-    "    df_forecast.to_parquet(path)"
+    "    df_forecast.fillna(\"NULL\").to_csv(path, index=False)"
    ]
   }
  ],
